<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GamesFragment">

    <Button
        android:id="@+id/btn_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/purple_500"
        android:text="@string/info"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dice_section" />

    <GridLayout
        android:id="@+id/dice_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:columnCount="2"
        android:rowCount="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_input_go">

        <Button
            android:id="@+id/btn_die_1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/purple_500"
            android:text="6"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_die_2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/purple_500"
            android:text="6"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_die_3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/purple_500"
            android:text="6"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_die_4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/purple_500"
            android:text="6"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
    </GridLayout>

    <LinearLayout
        android:id="@+id/layout_coins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_coins_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/coins" />

        <TextView
            android:id="@+id/txt_coins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/zero"
            android:textSize="15sp" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radio_group_alike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_coins">

        <RadioButton
            android:id="@+id/rb_two_alike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two_alike" />

        <RadioButton
            android:id="@+id/rb_three_alike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three_alike" />

        <RadioButton
            android:id="@+id/rb_four_alike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four_alike" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/layout_input_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.573"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group_alike">

        <EditText
            android:id="@+id/et_wager"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint=""
            android:inputType="number" />

        <Button
            android:id="@+id/btn_go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/go" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
